[gd_scene load_steps=3 format=3 uid="uid://c5vo2nxgebeso"]

[ext_resource type="Script" path="res://player_name.gd" id="1_ohb6r"]
[ext_resource type="PackedScene" uid="uid://dphg5i1mliq55" path="res://menu_sound.tscn" id="2_jq8yd"]

[node name="PlayerName" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ohb6r")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -84.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Start Game"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Quit"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 64.0
offset_right = 192.062
offset_bottom = 89.0
scale = Vector2(1.12, 0.68)
theme_override_font_sizes/font_size = 7
placeholder_text = "Type here"
alignment = 1
max_length = 8

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 24.0
offset_right = 246.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 16
text = "Your Nickname:"

[node name="MenuSound" parent="." instance=ExtResource("2_jq8yd")]

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
